--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,10 @@
    <form action='/response'>
     <select name="state">
       {{ options }}
+    <br><br>
     <input type="submit">
+    <br><br>
+    <p>{{ response }}</p>
    </form>
   </body>
 </html>
