--- a/templates/home.html
+++ b/templates/home.html
@@ -10,6 +10,7 @@
    <form action='/home'>
     <select name="state">
       {{ options }}
+    </select>
     <br><br>
     <input type="submit">
     <br><br>
